Just a checkpoint, during debug